# deequ

./: .gitignore  build.sbt  pyproject.toml
src/main/scala/com/amazon/deequ/examples/: ConstraintSuggestionExample.scala
src/main/scala/com/amazon/deequ/suggestions/: ConstraintSuggestionRunner.scala
src/main/scala/com/amazon/deequ/suggestions/rules/: NumbersRule.scala
src/test/scala/com/amazon/deequ/examples/: ExamplesTest.scala
