[tool.poetry]
name = "dq-notebooks"
version = "0.1.0"
description = ""
authors = ["Dario Bigongiari <dariobig@amazon.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pyspark = "^3.3.0"
jupyter = "^1.0.0"
pandas = "^1.4.3"
koalas = "^1.8.2"
py4j = "^0.10.9"
toree = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
